# FI-LIT

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: offline-assets.example.json
configs/: qlora_ddp_superni.yaml
docs/: offline_execution.md  superni_manifest.md
src/fi_lit/: __init__.py  __main__.py  cli.py  config.py  evaluate.py  offline.py  superni.py  train.py
tests/: test_config.py  test_evaluate.py  test_offline.py  test_superni.py  test_train.py
