[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fi-lit"
version = "0.1.0"
description = "Offline-first reproducible instruction-tuning research scaffold"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]
train = [
  "accelerate>=1.2",
  "bitsandbytes>=0.44",
  "datasets>=3.0",
  "peft>=0.13",
  "torch>=2.4",
  "transformers>=4.48",
]

[project.scripts]
fi-lit = "fi_lit.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["fi_lit"]

[tool.setuptools.packages.find]
where = ["src"]

